k8s/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  labels:
    app: emby
spec:
  clusterIP: None
  selector:
    app: emby
  ports:
  - name: emby
    port: 8080
    targetPort: 8096
