k8s/emby/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby
spec:
  rules:
  - host: emby.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8080
